<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".Search">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="416dp"
        android:layout_height="491dp"
        android:contentDescription="@string/bannerseacrh"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="@+id/txt_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/keanu" />

    <EditText
        android:id="@+id/txt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/inder"
        android:hint="@string/searchtext"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/vinho"
        android:fontFamily="@font/inder"
        android:onClick="buscaLivros"
        android:text="@string/searchbutton"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_search"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="463dp"
        android:layout_marginTop="272dp"
        android:backgroundTint="@color/vinho"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_titulo"
                    android:layout_width="205dp"
                    android:layout_height="55dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_ano"
                    android:layout_width="205dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_source"
                    android:layout_width="205dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_value"
                    android:layout_width="205dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_rated"
                    android:layout_width="205dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_released"
                    android:layout_width="205dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_runtime"
                    android:layout_width="205dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_genre"
                    android:layout_width="205dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_director"
                    android:layout_width="205dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_writer"
                    android:layout_width="205dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_plot"
                    android:layout_width="205dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_actors"
                    android:layout_width="205dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_language"
                    android:layout_width="205dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_country"
                    android:layout_width="205dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_awards"
                    android:layout_width="205dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_metascore"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_imdbid"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_imdbrating"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_imdbvotes"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_type"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_dvd"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_boxoffice"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_production"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_website"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_totalseasons"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>